[FEAT] Major Service Query Dsl 기반으로 조회하도록 수정, Major Service 유닛 테스트 추가